syntax = "proto3";
package snapchat.activation.api;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCChangeUsernamePb";
option csharp_namespace = "SnapProto.Snapchat.Activation.Api";

import "google/protobuf/timestamp.proto";

message SCChangeUsernamePbChangeUsernameRequest {
    string newUsername = 1;
    string persistentDeviceId = 2;
}

message SCChangeUsernamePbChangeUsernameResponse {
    .snapchat.activation.api.SCChangeUsernamePbChangeUsernameResponse.SCChangeUsernamePbChangeUsernameResponse_Status statusCode = 1;
    string humanReadableErrorMessage = 2;
    enum SCChangeUsernamePbChangeUsernameResponse_Status {
        SCChangeUsernamePbChangeUsernameResponse_Status_Unset = 0;
        SCChangeUsernamePbChangeUsernameResponse_Status_Success = 1;
        SCChangeUsernamePbChangeUsernameResponse_Status_ErrorUnkonwn = 2;
        SCChangeUsernamePbChangeUsernameResponse_Status_ErrorReauthenticationRequired = 3;
        SCChangeUsernamePbChangeUsernameResponse_Status_ErrorUsernameUnavailable = 4;
        SCChangeUsernamePbChangeUsernameResponse_Status_ErrorUsernameInvalid = 5;
        SCChangeUsernamePbChangeUsernameResponse_Status_ErrorChangedRecently = 6;
    }
}

message SCChangeUsernamePbGetLatestUsernameChangeDateRequest {
}

message SCChangeUsernamePbGetLatestUsernameChangeDateResponse {
    .google.protobuf.Timestamp latestChangeDate = 1;
    .google.protobuf.Timestamp earliestAllowedChangeDate = 2;
}